tests/diagnostics/packages/import_usage/imported_type_method_unknown/expect.txt
# exit: 1
lib.coppice:5:17: error: unknown method 'User.missing'
      return user.missing()
                  ^
